# Piola

./: Basparam.txt  CMakeLists.txt  DataOut.txt  Mesh.txt  README.md
fortranCode/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
fortranCode/include/: solvergp.h
fortranInterface/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  routines.f90
fortranInterface/include/: solvergp.h
gpMaterials_beta/: .gitignore~  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  openElementSources.py
gpMaterials_beta/src/EFEM/: FSgen_EFEM.f90  FSgen_EFEM_condesated.f90  FSgen_EFEM_voigt.f90  FSgen_EFEM_voigt2.f90  LinElas_EFEM_condesated.f90  LinElas_EFEM_voigt.f90  LinElas_beta_update.f90  computeDetQLinElas.f90  efemLib.f90  linElasLib.f90
gpMaterials_beta/src/FiniteStrain/: FSFbar.f90  FSgen.f90  FSgenMixed_voigt.f90  FSgen_voigt.f90  FbarMaterial.f90  FbarReduced.f90  FbarSpatial.f90  FiniteStrainDelta.f90  FiniteStrainGen.f90  FiniteStrainSpatial.f90  NeumannFiniteStrain.f90  computePressure.f90  finiteStrainLib.f90  finiteStrainNew.f90  materialLib.f90
gpMaterials_beta/src/Multiscale/: DecisionBifurcation.f90  MarkLocPoint.f90  StressHomGen.f90  TangentHom.f90  TotalDisp.f90  canonicalProblem.f90  computeMinDetQ.f90  computeTangHom.f90  computeTangHomGen.f90  computeTotalDisp2D.f90  flucTangHom.f90  flucTangHomGen.f90  minRestrictionBC2DExact.f90  multiscaleLib.f90
gpMaterials_beta/src/damage/: DamageGeneric.f90  DamageGenericGen.f90  DamageGenericGenLinElas.f90  damageLib.f90  damageModelsLib.f90  damageNewLib.f90
gpMaterials_beta/src/fibres/: MRplusZeroMean.f90  PosProcFibres.f90  ReactionLag.f90  RestrictionsFibres.f90  barElements.f90  computeAnisoTensors.f90  computeAnisoTensorsInv.f90  computeAnisotropyTensor.f90  computeAnisotropyTensor_boundary.f90  crossLinks_restriction.f90  damageFibLib.f90  damageGenericFibres.f90  fibresDisp.f90  fibresHom.f90  fibresHom2.f90  fibresHom3.f90  fibresHom4.f90  fibresLib.f90  fibresMod.f90  fibresModelsLib.f90  fibresTraction.f90  hyperFibres.f90  initParamFibres.f90  linearBarElementMS.f90  linearFibres.f90  linearFibres2.f90  minRestrictionContinuumFibres.f90  minRestrictionFibres.f90  minRestrictionFibresAniso.f90  minRestrictionFibresAniso_Boundary.f90  networkConstraint.f90  networkFibres.f90  nonlinearFibres.f90  nonlinearFibresVoigt.f90  nonlinearFibres_qfBased.f90  zeroAverageFibre.f90
gpMaterials_beta/src/identification/: AdjointProblem.f90  computeSens.f90  fillParamSensibility.f90  fillParamSensibility_GradD.f90  fillParamSensibility_mechRes.f90  identifyUpdateDamage.f90  mechResidual.f90
gpMaterials_beta/src/otherMaterials/: Cell2Point.f90  NodalForce.f90  PostProcessingElem2D.f90  PostProcessingRVEboundary.f90  insertDeformation.f90  insertDeformation2.f90  insertDeformationSimple.f90  loadingLib.f90  posProcElem.f90  posProcInterp.f90  setMaterialParam.f90
gpMaterials_beta/src/tools/: executer.f90  globalVariables.f90  ptsGaussLib2.f90
myelements/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  doxygenConfig  doxygenConfig~  openDoc.sh
myelements/src/FiniteStrain/: FSFbar.f90  FSgen.f90  FSgenMixed_voigt.f90  FSgen_voigt.f90  FbarMaterial.f90  FbarReduced.f90  FbarSpatial.f90  FiniteStrainDelta.f90  FiniteStrainGen.f90  FiniteStrainSpatial.f90  NeumannFiniteStrainSpatial.f90  NeumannRefTraction.f90  constitutiveLib.f90  finiteStrainLib.f90  (+1 more)
(+59 files in other folders)
